src/test/resources/failing/fail94.pnd
@Type(noDefault=true) Fruit
@type Apple : Fruit